--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,16 @@
 }
 
 .logo {
-    display: block;
     width: 300px;
+    margin-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .search-bar {
-    display: block;
     width: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
