--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
