--- a/styles.css
+++ b/styles.css
@@ -31,4 +31,9 @@
     margin-top: 30px;
     border: none;
     border-radius: 2px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+
 }
