--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,12 @@
     margin-right: auto;
     margin-top: 30px;
     border: none;
-    border-radius: 2px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
+    border-radius: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background: #dfe1e5;
+    font-size: 15px;
 
 }
