--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 .main {
     margin-top: 100px;
-    text-align: center;
 }
 
 .logo {
@@ -24,9 +23,15 @@
     margin-left: auto;
     margin-right: auto;
 }
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+}
 
 .btn-search {
     margin-top: 30px;
+    margin-left: 4px;
+    margin-right: 4px;
     border: none;
     border-radius: 5px;
     padding-top: 10px;
